--- a/software/platformio.ini
+++ b/software/platformio.ini
@@ -8,7 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+[platformio]
+env_default = esp-wrover-kit
+
 [env:teensy31]
 platform = teensy
 board = teensy31
 framework = arduino
+
+[env:esp-wrover-kit]
+platform = espressif32
+board = esp-wrover-kit
+framework = arduino
+monitor_speed = 115200
