Fixed Teensy bug introduced when I added ESP32

--- a/software/platformio.ini
+++ b/software/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [platformio]
-env_default = esp-wrover-kit
+env_default = teensy31
 
 [env:teensy31]
 platform = teensy
