Added ESP32 version with 7-segment display

--- a/software/platformio.ini
+++ b/software/platformio.ini
@@ -9,15 +9,17 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [platformio]
-env_default = teensy31
+env_default = esp-wrover-kit
 
 [env:teensy31]
 platform = teensy
 board = teensy31
 framework = arduino
+lib_deps = SevSeg
 
 [env:esp-wrover-kit]
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
+lib_deps = SevSeg
